# model_server

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE  build.sh  prepare.sh  push.sh
bazel/: LINUX_WORKSPACE  MACOS_WORKSPACE  WORKSPACE_LINUX  WORKSPACE_MACOS  absl.BUILD  bazel_module  bazel_module_linux  bazel_rc  bazel_workspace  brpc.BUILD  eigen.BUILD  eigen.MODULE  eigen.WORKSPACE  glog.BUILD  jemalloc.BUILD  leveldb.BUILD  libtensorflow.BUILD  libtensorflow.MODULE  libtensorflow.WORKSPACE  libtensorflow_macos.BUILD  macos_absl.BUILD  macos_gflags.BUILD  macos_glog.BUILD  macos_onnxruntime.BUILD  onnxruntime.BUILD  onnxruntime.WORKSPACE  onnxruntime_dnnl.BUILD  onnxruntime_dnnl.MODULE  onnxruntime_macos.BUILD  onnxruntime_tvm.BUILD  onnxruntime_tvm.MODULE  onnxruntime_tvm.WORKSPACE  openssl.BUILD  protobuf.BUILD  protobuf.MODULE  protobuf.WORKSPACE  tensorflow.BUILD
data/: BUILD
data/models/model_1/: graph_meta.json  model_conf.json
data/models/model_2/: model_conf.json
script/: deps.sh  functional.sh  prepare.sh  tf2onnx.py
scripts/: prepare.sh  test.sh
src/: BUILD
src/benchmark/: bm_flat_hash_map.cpp  bm_onnx_engine.cpp  bm_tf_engine.cpp
src/common/: model_spec.cpp  model_spec.h  return_status.cpp  return_status.h  sample.h
src/config/: gflags.cpp  gflags.h
src/data/: model_spec.cpp  model_spec.h  return_status.cpp  return_status.h  roster.cpp  roster.h  runtime_conf.h  sample.h  session_conf.h  type.h
src/embedding/: embedding.h
src/engine/: engine.h  onnx_dnnl_engine.cpp  onnx_dnnl_engine.h  onnx_engine.cpp  onnx_engine.h  onnx_tvm_engine.cpp  onnx_tvm_engine.h  sample.h  tf2_engine.cpp  tf2_engine.h  tf2_gpu_engine.cpp  tf2_gpu_engine.h  tf_engine.cpp  tf_engine.h  tf_gpu_engine.cpp  tf_gpu_engine.h  trt_engine.cpp  tvm_engine.cpp
src/inference_engine/: inference_engine.h  onnx_engine.cpp  onnx_engine.h  xla_engine.cpp  xla_engine.h
src/lifecycle/: Readme.md  lifecycle.h
src/population/: Readme.md  lifecycle.cpp  lifecycle.h  model_spec.cpp  model_spec.h  population.cpp  population.h  roster.cpp  roster.h  sample_gen.cpp  sample_gen.h
src/stresstest/: stress_framework.h
src/tool/: perf_graph.cpp
src/unittest/engine/: test_onnx_engine.cpp  test_tf_engine.cpp
src/unittest/util/: test.cpp
src/util/: comm.cpp  comm.h  io.cpp  io.h  serialize.cpp  serialize.h  util_test.cpp
src/util/algorithm/: algorithm.h  search.h
src/util/functional/: random.h  return_status.cpp  return_status.h  scope_exit_task.h  timer.h
src/util/os/: macros.h  network.cpp  network.h  resource_used.cpp  resource_used.h  semaphore.cpp  semaphore.h  thread_cpu.cpp  thread_cpu.h  vpopen.cpp  vpopen.h
src/util/os/linux/: macros.h  network.h  resource_used.h  semaphore.h  thread_cpu.h  vpopen.h
src/util/os/macos/: macros.h  network.h  (+4 more)
src/util/process/: process_initiator.h  process_status.cpp  process_status.h
test/: BUILD
test/engine/: test_onnx_engine.cpp  test_tf_engine.cpp
tools/: prepare.sh
